--- a/WebContent/accets/ticked.css
+++ b/WebContent/accets/ticked.css
@@ -22,6 +22,9 @@
     height: 100%;
     
 }
+.modal__inner{
+	    position: relative; 
+}
 
 .modal__body{
     background-color: var(--white-color);
